--- a/adminPage.html
+++ b/adminPage.html
@@ -104,7 +104,7 @@
                      </div>
                      <select class="form-control" id='filterdates'>
                         <option value='orderdate' selected>Order Date</option>
-                        <option value='starttime'>Start Date</option>
+                        <option value='runtime'>Start Date</option>
                         <option value='CompletionDate'>Completion Date</option>
                      </select>
                   </div>
@@ -634,8 +634,7 @@
                </tr>
                 <tr>
                   <td>
-                     <button class="btn btn-info btn-lg" type="button"  id="#roundups" onclick="getRoundups()" >Edit Round Up Values</button>
-                      <button class="btn btn-info btn-lg" type="button" onclick="getglobalFilter()" >Edit Global Date Filter</button>
+                    <button class="btn btn-info btn-lg" type="button"  id="#roundups" onclick="getRoundups()" >Edit Rount Up Values</button>
                   <button class="btn btn-info btn-lg" type="button"  id="#backupAndRestore" onclick="backupAndRestore()">Backup And Restore</button>
                    <button class="btn btn-info btn-lg" type="button"   onclick="refreshOrders()">Refresh Orders</button>
                   </td>
