--- a/OrderForm.html
+++ b/OrderForm.html
@@ -434,7 +434,7 @@ function newrow(e) {
         var orderID=$('#orderID').val();
         
         var productdescription= $('#PD'+(i+1)).val();
-        var priority = 0;
+        var priority = '';
         if(!newCUSTSelected){
         var customerSKU = $('#customerSelect').val();
         var customerSelect= $('#customerSelect option:selected').text();
