--- a/adminPage.html
+++ b/adminPage.html
@@ -635,6 +635,7 @@
                 <tr>
                   <td>
                     <button class="btn btn-info btn-lg" type="button"  id="#roundups" onclick="getRoundups()" >Edit Rount Up Values</button>
+                      <button class="btn btn-info btn-lg" type="button" onclick="getglobalFilter()" >Edit Global Date Filter</button>
                   <button class="btn btn-info btn-lg" type="button"  id="#backupAndRestore" onclick="backupAndRestore()">Backup And Restore</button>
                    <button class="btn btn-info btn-lg" type="button"   onclick="refreshOrders()">Refresh Orders</button>
                   </td>
