--- a/stylesheet.html
+++ b/stylesheet.html
@@ -1,5 +1,12 @@
 
     <style>
+    
+ .flex{
+ padding:60px 0 60px 0;
+ display:flex;
+ justify-content:space-between;
+ 
+ }
         /* hidding input files */
  .modal-content {
   position: relative;
