--- a/adminPage.html
+++ b/adminPage.html
@@ -73,6 +73,7 @@
                   <button type="button" id='getOrderIDs2' class="btn btn-info btn-lg" data-toggle="modal" data-target="#statusModal">Check Order Status</button>
                   <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#priorityModal" id='priorityButton'>Set Order Priorities</button>
                   <button class="btn btn-info btn-lg" type="button" id='scheduleManage'>Manage Schedules</button>
+                  <button class="btn btn-info btn-lg" type="button" id='getpremixReports' onclick='getpremixReports()'>Generate Safety Reports</button>
                   <button type='button' id='savepoint' class="btn btn-info btn-lg"><i class="fa fa-floppy-o fa-3x" aria-hidden="true"></i></button>
                   <button type='button' style='display:none;' id='restorepoint' class="btn btn-info btn-lg"><i class="fa fa-undo fa-3x" aria-hidden="true"></i></button>
                </li>
