--- a/modals.html
+++ b/modals.html
@@ -22,13 +22,13 @@
 
         <div class="modal-content" style='width:1400px; height:90%; left: -300px;'>
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close" onclick ='closemainmodal()' >&times;</button>
             </div>
             <div class="htmlMSGmodalbody">
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" onclick ='closemainmodal()'>Close</button>
             </div>
         </div>
 
@@ -87,7 +87,7 @@
                                 <input autocomplete="on" class="form-control" id="descriptionpage" style="display:none;" placeholder="Product Description" aria-describedby="sizing-addon2" />
                                 <input autocomplete="on" class="form-control" id="descriptionsku" style="display:none;" placeholder="Product Description" aria-describedby="sizing-addon2" />
                             </div>
-                            <div id="dropdown4">
+                            <div id="dropdown4" class= "suggestDropdowns">
                                 <select name="list4" onclick="setVal4(this);" id="list4"></select>
                             </div>
                         </td>
