--- a/stylesheet.html
+++ b/stylesheet.html
@@ -1,12 +1,5 @@
 
     <style>
-    
- .flex{
- padding:60px 0 60px 0;
- display:flex;
- justify-content:space-between;
- 
- }
         /* hidding input files */
  .modal-content {
   position: relative;
@@ -478,5 +471,9 @@ margin: 20px;
 overflow-y:scroll;
 heigth:500px;
 
+}
+.suggestDropdowns{
+position: absolute;
+z-index: 20;
 }
     </style>
