--- a/modals.html
+++ b/modals.html
@@ -1697,7 +1697,7 @@
                         <td>Linked Code</td>
                         <td>Recipe</td>
                         <td>Brand</td>
-                        <td></td>
+                        <td>Price</td>
                     </tr>
                     <tr>
                         <td>
@@ -1721,7 +1721,9 @@
                         <td>
                             <select class="form-control" id='newPCDbrand'></select>
                         </td>
-                        <td></td>
+                        <td><div class="input-group">
+                                <input class="form-control" type="text" id="newprice" placeholder="Price" aria-describedby="sizing-addon2" />
+                            </div></td>
                     </tr>
                     <tr>
                         <td>Flavour</td>
@@ -1849,7 +1851,7 @@
                         <td>Linked Code</td>
                         <td>Recipe</td>
                         <td>Brand</td>
-                        <td></td>
+                        <td>Price</td>
                     </tr>
                     <tr>
                         <td>
@@ -1879,7 +1881,11 @@
                         <td>
                             <select class="form-control" id='editPCDbrand'></select>
                         </td>
-                        <td></td>
+                        <td>
+                            <div class="input-group">
+                                <input class="form-control" type="text" id="editprice" placeholder="Price" aria-describedby="sizing-addon2" />
+                            </div>
+                        </td>
                     </tr>
                     <tr>
                         <td>Flavour</td>
