--- a/adminPage.html
+++ b/adminPage.html
@@ -74,6 +74,8 @@
                   <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#priorityModal" id='priorityButton'>Set Order Priorities</button>
                   <button class="btn btn-info btn-lg" type="button" id='scheduleManage'>Manage Schedules</button>
                   <button class="btn btn-info btn-lg" type="button" id='getpremixReports' onclick='getpremixReports()'>Generate Safety Reports</button>
+                  
+                  <button class="btn btn-info btn-lg" type="button" id='showNotes' onclick="showNotes()">Notes</button>
                   <button type='button' id='savepoint' class="btn btn-info btn-lg"><i class="fa fa-floppy-o fa-3x" aria-hidden="true"></i></button>
                   <button type='button' style='display:none;' id='restorepoint' class="btn btn-info btn-lg"><i class="fa fa-undo fa-3x" aria-hidden="true"></i></button>
                </li>
@@ -90,6 +92,7 @@
                      <button type="button" id='deleteDisplayedOrders' onclick="deleteAll()">Delete Displayed</button>
                      <button type="button" id='deleteandreverseSelected' onclick="deleteandreverseSelected()">Delete and Reverse Stock</button>
                      <button type="button" id='reverseSelected' onclick="reverseSelected()">Reverse Stock</button>
+                    
                   </div>
                </li>
             </ul>
