printpage complete mupltiple

--- a/adminPage.html
+++ b/adminPage.html
@@ -293,6 +293,16 @@
                <li>
                   <button type="button" id='deleteDisplayedOrders' onclick="deleteAll()">Delete Displayed</button>
                </li>
+                <li class="nav-item">
+                  <div>
+                     <div id='selectionPrinting' style="margin-top:20px;">
+                     </div>
+                         <button type="button" id='selectAllOrders' onclick="selectAll()" style="display:inline-block;margin-right:30px;">Select All</button>
+                     <button type="button" id='checkstock' onclick="runmultiSL()" style="display:inline-block;">Complete Selected</button>
+                 
+
+                  </div>
+               </li>
             </ul>
             <ul class="nav navbar-nav navbar">
                <li class="nav-item">
