--- a/jsmain.html
+++ b/jsmain.html
@@ -2036,7 +2036,7 @@ html += '<td><button page="Production" batch="'+data[i].batch+'" onclick="moveUp
     }
     
     function buildPrintingTable(data) {
-  
+     SelAllOrders=data;
     var html = '';
     thisData=data;
     thisPage='Printing';
