copmete all printing fix

--- a/jsmain.html
+++ b/jsmain.html
@@ -1299,7 +1299,7 @@ edit_flavour_mix_order=true;
     }  
     function multRun(msg){
     
-       alert(msg);
+       htmlModalMSG('<p>'+msg+'</p>');
      filterpage('xx',true);
    //buildOrders(SelAllOrders);
      $("#updating").css("display", "none");
