--- a/adminPage.html
+++ b/adminPage.html
@@ -304,7 +304,7 @@
                   </div>
                </li>
             </ul>
-            <ul class="nav navbar-nav navbar">
+            <ul class="nav navbar-nav navbar" style="display:block;">
                <li class="nav-item">
                   <div class='searchDates' id='searchDatesPrinting'>
                      <div class='startSearch'>
