--- a/slSheets.html
+++ b/slSheets.html
@@ -3224,7 +3224,7 @@ for(var i=0;i<thisData.length;i++){
     }    
     function multRun(msg){
     
-    alert(msg);
+    htmlModalMSG(msg);
     filterpage('xx',true);
     //buildOrders(SelAllOrders);
     $("#updating").css("display", "none");
@@ -3831,6 +3831,9 @@ switch (type){
     case 'notesModal':
     built= buildNotesModal(data);
     break;
+    case 'htmlMSG':
+    built= buildHtmlMsg(data);
+    break;
   default:
 
   break;
@@ -3839,7 +3842,15 @@ $('.htmlMSGmodalbody').html(built);
 $('#htmlMSGmodal').modal('show');
 $("#updating").css("display", "none");
 }
+function htmlModalMSG(msg){
+buildhtmlmodal([msg,'htmlMSG'])
+  
+}
+function buildHtmlMsg(msg){
+var html='<div  class="container">'+msg+'</div>';
 
+return html;
+}
 var DELandREVData=[];
 function buildDeleteAndReverse(list){
 DELandREVData=list;
