--- a/adminPage.html
+++ b/adminPage.html
@@ -573,6 +573,45 @@
                   <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#newInventoryFromSheet">Import Inventory List from Sheet</button>
                </li>
             </ul>
+            <ul class="nav navbar-nav navbar" style='display:block;'>
+               <li class="nav-item">
+                  <div class='searchDates' id='searchDatesInventory'>
+                     <div class='startSearch'>
+                        From:
+                        <input type="date" onchange='datesearch();' class="form-control" id="startSearch" />
+                     </div>
+                     <div class='startSearch'>
+                        To:
+                        <input type="date" onchange='datesearch();' class="form-control" id="endSearch" />
+                     </div>
+                     <select class="form-control" id='filterdates'>
+                        <option value='orderdate' selected>Order Date</option>
+                        <option value='delivdate'>Delivery Date</option>
+                        <option value='paiddate'>Paid Date</option>
+                     </select>
+                  </div>
+                  <div id="searchBox" class='searchBoxInventory'>
+                  </div>
+               </li>
+               <li>Split Pages By: </li>
+               <li>
+                  <select class="form-control" style='margin:20px 0; width:100px;' id='splitcountselect' onchange="changeSplit()">
+                     <option>50</option>
+                     <option>100</option>
+                     <option>150</option>
+                     <option>200</option>
+                     <option>250</option>
+                     <option>300</option>
+                     <option>400</option>
+                     <option>500</option>
+                     <option value='all'>All</option>
+                  </select>
+               </li>
+               <li>
+               <div class='content' id='Pagination2'></div>
+              
+               </li>
+            </ul>
          </nav>
          <div id='invbody'></div>
       </div>
