--- a/modals.html
+++ b/modals.html
@@ -1540,6 +1540,31 @@
     </div>
 </div>
 
+
+<div class="modal fade" id="newFlavourMixesFromSheet" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Import Flavour Mixes from Sheet</h4>
+            </div>
+            <div class="modal-body7">
+                <p>Before Upload Please check that your spreadsheet follows the desired format.</p>
+
+                <div class="input-group">
+                    <input class="form-control" type="text" id="flavourMixSheetId" aria-describedby="sizing-addon2" />
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="save_sheet_flavour_mix">Upload Sheet</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal fade" id="newBottlesFromSheet" role="dialog">
     <div class="modal-dialog modal-lg">
         <!-- Modal content-->
