--- a/stylesheet.html
+++ b/stylesheet.html
@@ -430,8 +430,22 @@ font-family: Gill Sans, Verdana;
  letter-spacing: 2px;
  font-weight: bold;
  margin-bottom:10px;
+ 
 }
 
+.renderType{
+    font-size: 22px;
+    font-weight: 500;
+    padding-bottom:20px;
+}
+#renderDisplay{
+   font-size: 30px;
+   cursor:pointer;
+}
+.valtotal span{
+display:inline-block;
+padding-bottom:20px;
+}
 #flavourDropdowns{
 margin-top:40px;
 }
@@ -543,4 +557,9 @@ overflow-y:scroll;
 heigth:500px;
 
 }
+
+#renderDisplaySwitch{
+padding:10px;
+}
+ 
     </style>
