sort functions fix

--- a/jsmain.html
+++ b/jsmain.html
@@ -4101,7 +4101,8 @@ function show4() {
         for (var i = 0; i < INPDATA.length; i++) {
             var testableRegExp = new RegExp(RegExp.escape(textCountry), "i");
              if(INPDATA[i].name){
-            if (INPDATA[i].name.match(testableRegExp)) {
+           
+            if (INPDATA[i].name.toString().match(testableRegExp)) {
            
                 addValue4(INPDATA[i].name, INPDATA[i].name, INPDATA[i].sku, INPDATA[i].page, INPDATA[i].key);
 
